deployement/golang_example_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-exporter-deployment
  labels:
    app: go-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-web
  template:
    metadata:
      labels:
        app: go-web
    spec:
      containers:
      - name: go-web
        image: quay.io/hazel_shen/go_exporter_example:v2
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: node-exporter-service
  namespace: node-exporter-example
spec:
  selector:
    app: go-web
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
