deployement/node_exporter_example.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-exporter-deployment
  labels:
    app: go-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-web
  template:
    metadata:
      labels:
        app: go-web
    spec:
      containers:
      - name: go-web
        image: quay.io/hazel_shen/go_exporter_example:v1
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: go-web
  labels:
    run: go-web
spec:
  ports:
  - port: 8000
    protocol: TCP
  selector:
    run: go-web
