deployement/golang_example_route.yaml
---
apiVersion: v1
kind: Route
metadata:
  name: go-web
spec:
  to:
    kind: Service
    name: go-web
